// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parser snapshots — real receipts > in-delivery-01: Indian delivery receipt (no GST line, container charge) 1`] = `
{
  "billType": "delivery",
  "charges": [
    {
      "amount": 30,
      "confidence": 0.9,
      "label": "Container Charge",
      "type": "service_fee",
    },
  ],
  "confidenceScores": {
    "charges": 0.6,
    "date": 0,
    "items": 0.78,
    "merchantName": 0,
    "subtotal": 0.65,
    "total": 0.92,
  },
  "country": "IN",
  "date": null,
  "flaggedFields": [
    "merchantName",
    "date",
    "charges",
    "subtotal",
  ],
  "items": [
    {
      "category": "food",
      "confidence": 0.78,
      "name": "Chicken Wings (4 Pc)",
      "quantity": 1,
      "totalPrice": 150,
      "unitPrice": 150,
    },
    {
      "category": "food",
      "confidence": 0.78,
      "name": "Garlic Mayonnaise",
      "quantity": 1,
      "totalPrice": 30,
      "unitPrice": 30,
    },
    {
      "category": "food",
      "confidence": 0.78,
      "name": "Peri Peri French Fries",
      "quantity": 1,
      "totalPrice": 120,
      "unitPrice": 120,
    },
    {
      "category": "food",
      "confidence": 0.78,
      "name": "Special Chicken Shawarma In Rumali",
      "quantity": 1,
      "totalPrice": 130,
      "unitPrice": 130,
    },
  ],
  "merchantName": null,
  "subtotal": 430,
  "total": 460,
}
`;

exports[`parser snapshots — real receipts > in-restaurant-01: Indian restaurant receipt (GST-inclusive, SI numbers, Pk quantities) 1`] = `
{
  "billType": "restaurant",
  "charges": [],
  "confidenceScores": {
    "charges": 0,
    "date": 0.85,
    "items": 0.78,
    "merchantName": 0.8,
    "subtotal": 0.65,
    "total": 0.92,
  },
  "country": "IN",
  "date": "2025-09-07",
  "flaggedFields": [
    "charges",
    "subtotal",
  ],
  "items": [
    {
      "category": "food",
      "confidence": 0.78,
      "name": "PAROTTA 9Pk",
      "quantity": 1,
      "totalPrice": 180,
      "unitPrice": 180,
    },
    {
      "category": "food",
      "confidence": 0.78,
      "name": "CHICKEN 65 1Pk",
      "quantity": 1,
      "totalPrice": 150,
      "unitPrice": 150,
    },
    {
      "category": "food",
      "confidence": 0.78,
      "name": "CHICKEN LOLIPOP 4Pk",
      "quantity": 1,
      "totalPrice": 200,
      "unitPrice": 200,
    },
    {
      "category": "food",
      "confidence": 0.78,
      "name": "C.THOKKU BIRIYA 2Pk",
      "quantity": 1,
      "totalPrice": 280,
      "unitPrice": 280,
    },
  ],
  "merchantName": "HOTEL SATHAR ROWTHER",
  "subtotal": 810,
  "total": 810,
}
`;

exports[`parser snapshots — real receipts > us-delivery-01: UberEats receipt (US, single item with modifiers, tax additive) 1`] = `
{
  "billType": "delivery",
  "charges": [
    {
      "amount": 37.28,
      "confidence": 0.93,
      "label": "Tax",
      "rate": undefined,
      "type": "state_tax",
    },
    {
      "amount": 0,
      "confidence": 0.88,
      "label": "Tip",
      "rate": undefined,
      "type": "gratuity",
    },
  ],
  "confidenceScores": {
    "charges": 0.6,
    "date": 0,
    "items": 0.78,
    "merchantName": 0.8,
    "subtotal": 0.65,
    "total": 0.92,
  },
  "country": "US",
  "date": null,
  "flaggedFields": [
    "date",
    "charges",
    "subtotal",
  ],
  "items": [
    {
      "category": "food",
      "confidence": 0.78,
      "name": "King's Experience",
      "quantity": 1,
      "totalPrice": 369,
      "unitPrice": 369,
    },
  ],
  "merchantName": "Uber Eats",
  "subtotal": 369,
  "total": 406.28,
}
`;

exports[`parser snapshots — real receipts > us-delivery-02: UberEats receipt (US, 2x quantity, delivery fee, order note block) 1`] = `
{
  "billType": "delivery",
  "charges": [
    {
      "amount": 2.4,
      "confidence": 0.93,
      "label": "Tax",
      "rate": undefined,
      "type": "state_tax",
    },
    {
      "amount": 0.99,
      "confidence": 0.9,
      "label": "Delivery Fee",
      "type": "delivery_fee",
    },
  ],
  "confidenceScores": {
    "charges": 0.92,
    "date": 0,
    "items": 0.78,
    "merchantName": 0.8,
    "subtotal": 0.9,
    "total": 0.7,
  },
  "country": "US",
  "date": null,
  "flaggedFields": [
    "date",
    "total",
  ],
  "items": [
    {
      "category": "food",
      "confidence": 0.78,
      "name": "Classic Dig Bowl",
      "quantity": 2,
      "totalPrice": 27.08,
      "unitPrice": 13.54,
    },
  ],
  "merchantName": "Uber Eats #9E273",
  "subtotal": 27.08,
  "total": 30.47,
}
`;
